src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Detailed_Solution__c</fullName>
        <label>Detailed Solution</label>
        <picklist>
            <controllingField>Solution__c</controllingField>
            <picklistValues>
                <fullName>Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compensation / stamps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compensation stamp sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery scan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force Majeure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Found in NIGS/KIPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goodwill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No response from customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No scan in GTT/NTT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not PN responsibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only EDI scan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Nord fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund postage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong decision in previous case</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diff_B_W_Closed_Exp_Date_To_Be_Approved__c</fullName>
        <formula>Expected_date_to_be_Approved__c - DATEVALUE(ClosedDate)</formula>
        <label>Diff B\W Closed&amp;Exp Date To Be Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_B_W_Closed_Req_Date_To_Be_Approved__c</fullName>
        <formula>Requested_date_to_be_Approved__c - DATEVALUE(ClosedDate)</formula>
        <label>Diff B\W Closed&amp;Req Date To Be Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_B_w_Assigned2Q_and_WaitingForInfo__c</fullName>
        <formula>IF( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) &gt; 0 ,CASE(MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c)- DATEVALUE(Case_Status_Assigned_to_Queue_Date__c),7), 
0 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(Case_Status_Assigned_to_Queue_Date__c),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(Case_Status_Assigned_to_Queue_Date__c),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(Case_Status_Assigned_to_Queue_Date__c),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) )/7)*5)-1,-(CASE(MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7), 
0 , CASE( MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) - DATEVALUE(Case_Status_Waiting_for_Info_Date__c))/7)*5)-1))</formula>
        <label>Diff B/w Assigned2Q and WaitingForInfo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_B_w_Assigned_2_Queue_and_InProgress__c</fullName>
        <formula>IF( DATEVALUE(Case_Status_In_Progress_Date__c) - DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) &gt; 0 ,CASE(MOD( DATEVALUE(Case_Status_In_Progress_Date__c)- DATEVALUE(Case_Status_Assigned_to_Queue_Date__c),7), 
0 , CASE( MOD( DATEVALUE(Case_Status_In_Progress_Date__c) - DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(Case_Status_In_Progress_Date__c) - DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(Case_Status_In_Progress_Date__c) - DATEVALUE(Case_Status_Assigned_to_Queue_Date__c),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(Case_Status_In_Progress_Date__c) - DATEVALUE(Case_Status_Assigned_to_Queue_Date__c),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(Case_Status_In_Progress_Date__c) - DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(Case_Status_In_Progress_Date__c) - DATEVALUE(Case_Status_Assigned_to_Queue_Date__c),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(Case_Status_In_Progress_Date__c) - DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( DATEVALUE(Case_Status_In_Progress_Date__c) - DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) )/7)*5)-1,-(CASE(MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c)- DATEVALUE(Case_Status_In_Progress_Date__c) ,7), 
0 , CASE( MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c)- DATEVALUE(Case_Status_In_Progress_Date__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c)- DATEVALUE(Case_Status_In_Progress_Date__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c)- DATEVALUE(Case_Status_In_Progress_Date__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c)- DATEVALUE(Case_Status_In_Progress_Date__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c)- DATEVALUE(Case_Status_In_Progress_Date__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c)- DATEVALUE(Case_Status_In_Progress_Date__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c)- DATEVALUE(Case_Status_In_Progress_Date__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) - DATEVALUE(Case_Status_In_Progress_Date__c))/7)*5)-1))</formula>
        <label>Diff B/w Assigned 2 Queue and InProgress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_B_w_Created_and_Assigned_to_Queue__c</fullName>
        <formula>IF( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) - DATEVALUE(CreatedDate) &gt; 0 ,CASE(MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c)- DATEVALUE(CreatedDate),7), 
0 , CASE( MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) - DATEVALUE(CreatedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) - DATEVALUE(CreatedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) - DATEVALUE(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) - DATEVALUE(CreatedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) - DATEVALUE(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) - DATEVALUE(CreatedDate) )/7)*5)-1,-(CASE(MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) ,7), 
0 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Assigned_to_Queue_Date__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( DATEVALUE(CreatedDate) - DATEVALUE(Case_Status_Assigned_to_Queue_Date__c))/7)*5)-1))</formula>
        <label>Diff B/w Created and Assigned to Queue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_B_w_Created_and_Cancelled_Date__c</fullName>
        <formula>IF( DATEVALUE(Case_Status_Cancelled_Date__c) - DATEVALUE(CreatedDate) &gt; 0 ,CASE(MOD( DATEVALUE(Case_Status_Cancelled_Date__c)- DATEVALUE(CreatedDate),7), 
0 , CASE( MOD( DATEVALUE(Case_Status_Cancelled_Date__c) - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(Case_Status_Cancelled_Date__c) - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(Case_Status_Cancelled_Date__c) - DATEVALUE(CreatedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(Case_Status_Cancelled_Date__c) - DATEVALUE(CreatedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(Case_Status_Cancelled_Date__c) - DATEVALUE(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(Case_Status_Cancelled_Date__c) - DATEVALUE(CreatedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(Case_Status_Cancelled_Date__c) - DATEVALUE(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( DATEVALUE(Case_Status_Cancelled_Date__c) - DATEVALUE(CreatedDate) )/7)*5)-1,-(CASE(MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Cancelled_Date__c) ,7), 
0 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Cancelled_Date__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Cancelled_Date__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Cancelled_Date__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Cancelled_Date__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Cancelled_Date__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Cancelled_Date__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Cancelled_Date__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( DATEVALUE(CreatedDate) - DATEVALUE(Case_Status_Cancelled_Date__c))/7)*5)-1))</formula>
        <label>Diff B/w Created and Cancelled Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_B_w_Created_and_Closed_Date__c</fullName>
        <formula>IF( DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate) &gt; 0 ,CASE(MOD( DATEVALUE(ClosedDate)- DATEVALUE(CreatedDate),7), 
0 , CASE( MOD( DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate) )/7)*5)-1,-(CASE(MOD( DATEVALUE(CreatedDate)- DATEVALUE(ClosedDate) ,7), 
0 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(ClosedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(ClosedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(ClosedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(ClosedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(ClosedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(ClosedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(ClosedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( DATEVALUE(CreatedDate) - DATEVALUE(ClosedDate))/7)*5)-1))</formula>
        <label>Diff B/w Created and Closed Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_B_w_Created_and_In_Progress__c</fullName>
        <formula>IF( DATEVALUE(Case_Status_In_Progress_Date__c) - DATEVALUE(CreatedDate) &gt; 0 ,CASE(MOD( DATEVALUE(Case_Status_In_Progress_Date__c)- DATEVALUE(CreatedDate),7), 
0 , CASE( MOD( DATEVALUE(Case_Status_In_Progress_Date__c) - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(Case_Status_In_Progress_Date__c) - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(Case_Status_In_Progress_Date__c) - DATEVALUE(CreatedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(Case_Status_In_Progress_Date__c) - DATEVALUE(CreatedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(Case_Status_In_Progress_Date__c) - DATEVALUE(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(Case_Status_In_Progress_Date__c) - DATEVALUE(CreatedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(Case_Status_In_Progress_Date__c) - DATEVALUE(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( DATEVALUE(Case_Status_In_Progress_Date__c) - DATEVALUE(CreatedDate) )/7)*5)-1,-(CASE(MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_In_Progress_Date__c) ,7), 
0 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_In_Progress_Date__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_In_Progress_Date__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_In_Progress_Date__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_In_Progress_Date__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_In_Progress_Date__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_In_Progress_Date__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_In_Progress_Date__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( DATEVALUE(CreatedDate) - DATEVALUE(Case_Status_In_Progress_Date__c))/7)*5)-1))</formula>
        <label>Diff B/w Created and In Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_B_w_Created_and_Waiting_for_Info__c</fullName>
        <formula>IF( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(CreatedDate) &gt; 0 ,CASE(MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c)- DATEVALUE(CreatedDate),7), 
0 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(CreatedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(CreatedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(CreatedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(CreatedDate) )/7)*5)-1,-(CASE(MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7), 
0 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(CreatedDate)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( DATEVALUE(CreatedDate) - DATEVALUE(Case_Status_Waiting_for_Info_Date__c))/7)*5)-1))</formula>
        <label>Diff B/w Created and Waiting for Info</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_B_w_InProgress_and_Waiting_for_Info__c</fullName>
        <formula>IF( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(Case_Status_In_Progress_Date__c) &gt; 0 ,CASE(MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c)- DATEVALUE(Case_Status_In_Progress_Date__c),7), 
0 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(Case_Status_In_Progress_Date__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(Case_Status_In_Progress_Date__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(Case_Status_In_Progress_Date__c),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(Case_Status_In_Progress_Date__c),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(Case_Status_In_Progress_Date__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(Case_Status_In_Progress_Date__c),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(Case_Status_In_Progress_Date__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(Case_Status_In_Progress_Date__c) )/7)*5)-1,-(CASE(MOD( DATEVALUE(Case_Status_In_Progress_Date__c)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7), 
0 , CASE( MOD( DATEVALUE(Case_Status_In_Progress_Date__c)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(Case_Status_In_Progress_Date__c)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(Case_Status_In_Progress_Date__c)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(Case_Status_In_Progress_Date__c)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(Case_Status_In_Progress_Date__c)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(Case_Status_In_Progress_Date__c)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(Case_Status_In_Progress_Date__c)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( DATEVALUE(Case_Status_In_Progress_Date__c) - DATEVALUE(Case_Status_Waiting_for_Info_Date__c))/7)*5)-1))</formula>
        <label>Diff B/w InProgress and Waiting for Info</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_B_w_Waiting_for_Info_and_Closed__c</fullName>
        <formula>IF( DATEVALUE(ClosedDate) - DATEVALUE(Case_Status_Waiting_for_Info_Date__c) &gt; 0 ,CASE(MOD( DATEVALUE(ClosedDate)- DATEVALUE(Case_Status_Waiting_for_Info_Date__c),7), 
0 , CASE( MOD( DATEVALUE(ClosedDate) - DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(ClosedDate) - DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(ClosedDate) - DATEVALUE(Case_Status_Waiting_for_Info_Date__c),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(ClosedDate) - DATEVALUE(Case_Status_Waiting_for_Info_Date__c),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(ClosedDate) - DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(ClosedDate) - DATEVALUE(Case_Status_Waiting_for_Info_Date__c),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(ClosedDate) - DATEVALUE(Case_Status_Waiting_for_Info_Date__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( DATEVALUE(ClosedDate) - DATEVALUE(Case_Status_Waiting_for_Info_Date__c) )/7)*5)-1,-(CASE(MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c)- DATEVALUE(ClosedDate) ,7), 
0 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c)- DATEVALUE(ClosedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c)- DATEVALUE(ClosedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c)- DATEVALUE(ClosedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c)- DATEVALUE(ClosedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c)- DATEVALUE(ClosedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c)- DATEVALUE(ClosedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(Case_Status_Waiting_for_Info_Date__c)- DATEVALUE(ClosedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( DATEVALUE(Case_Status_Waiting_for_Info_Date__c) - DATEVALUE(ClosedDate))/7)*5)-1))</formula>
        <label>Diff B/w Waiting for Info and Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_Cls_Exp_To_Be_Appr_Business_Days__c</fullName>
        <formula>IF(Expected_date_to_be_Approved__c -  DATEVALUE(ClosedDate) &gt; 0 ,CASE(MOD( Expected_date_to_be_Approved__c -  DATEVALUE(ClosedDate),7), 
  0 , CASE( MOD( Expected_date_to_be_Approved__c -  DATEVALUE(ClosedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Expected_date_to_be_Approved__c -  DATEVALUE(ClosedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Expected_date_to_be_Approved__c -  DATEVALUE(ClosedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Expected_date_to_be_Approved__c -  DATEVALUE(ClosedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Expected_date_to_be_Approved__c -  DATEVALUE(ClosedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Expected_date_to_be_Approved__c -  DATEVALUE(ClosedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Expected_date_to_be_Approved__c -  DATEVALUE(ClosedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  9999999999)  + 
  (FLOOR(( Expected_date_to_be_Approved__c -  DATEVALUE(ClosedDate) )/7)*5)-1,-(CASE(MOD( DATEVALUE(ClosedDate)-  Expected_date_to_be_Approved__c ,7), 
  0 , CASE( MOD( DATEVALUE(ClosedDate)-  Expected_date_to_be_Approved__c  ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( DATEVALUE(ClosedDate)-  Expected_date_to_be_Approved__c  ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( DATEVALUE(ClosedDate)-  Expected_date_to_be_Approved__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( DATEVALUE(ClosedDate)-  Expected_date_to_be_Approved__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( DATEVALUE(ClosedDate)-  Expected_date_to_be_Approved__c  ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( DATEVALUE(ClosedDate)-  Expected_date_to_be_Approved__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( DATEVALUE(ClosedDate)-  Expected_date_to_be_Approved__c  ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  9999999999)  + 
  (FLOOR(( DATEVALUE(ClosedDate) -  Expected_date_to_be_Approved__c  )/7)*5)-1))</formula>
        <label>Diff Cls&amp;Exp To Be Appr(Business Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_Cls_Req_To_Be_Appr_Business_Days__c</fullName>
        <formula>IF(Requested_date_to_be_Approved__c - DATEVALUE(ClosedDate) &gt; 0 ,CASE(MOD( Requested_date_to_be_Approved__c- DATEVALUE(ClosedDate),7), 
0 , CASE( MOD( Requested_date_to_be_Approved__c - DATEVALUE(ClosedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Requested_date_to_be_Approved__c - DATEVALUE(ClosedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Requested_date_to_be_Approved__c - DATEVALUE(ClosedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Requested_date_to_be_Approved__c - DATEVALUE(ClosedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Requested_date_to_be_Approved__c - DATEVALUE(ClosedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Requested_date_to_be_Approved__c - DATEVALUE(ClosedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Requested_date_to_be_Approved__c - DATEVALUE(ClosedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( Requested_date_to_be_Approved__c - DATEVALUE(ClosedDate) )/7)*5)-1,-(CASE(MOD( DATEVALUE(ClosedDate)- Requested_date_to_be_Approved__c ,7), 
0 , CASE( MOD( DATEVALUE(ClosedDate)- Requested_date_to_be_Approved__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(ClosedDate)- Requested_date_to_be_Approved__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(ClosedDate)- Requested_date_to_be_Approved__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(ClosedDate)- Requested_date_to_be_Approved__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(ClosedDate)- Requested_date_to_be_Approved__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(ClosedDate)- Requested_date_to_be_Approved__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(ClosedDate)- Requested_date_to_be_Approved__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( DATEVALUE(ClosedDate) - Requested_date_to_be_Approved__c )/7)*5)-1))</formula>
        <label>Diff Cls&amp;Req To Be Appr(Business Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_Exp_Req_To_Be_Appr_Business_Days__c</fullName>
        <formula>IF(Requested_date_to_be_Approved__c - Expected_date_to_be_Approved__c &gt; 0 ,CASE(MOD( Expected_date_to_be_Approved__c - Expected_date_to_be_Approved__c,7), 
0 , CASE( MOD( Requested_date_to_be_Approved__c - Expected_date_to_be_Approved__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Requested_date_to_be_Approved__c - Expected_date_to_be_Approved__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Requested_date_to_be_Approved__c - Expected_date_to_be_Approved__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Requested_date_to_be_Approved__c - Expected_date_to_be_Approved__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Requested_date_to_be_Approved__c - Expected_date_to_be_Approved__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Requested_date_to_be_Approved__c - Expected_date_to_be_Approved__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Requested_date_to_be_Approved__c - Expected_date_to_be_Approved__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( Requested_date_to_be_Approved__c - Expected_date_to_be_Approved__c )/7)*5)-1,-(CASE(MOD( Expected_date_to_be_Approved__c - Requested_date_to_be_Approved__c ,7), 
0 , CASE( MOD( Expected_date_to_be_Approved__c - Requested_date_to_be_Approved__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Expected_date_to_be_Approved__c - Requested_date_to_be_Approved__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Expected_date_to_be_Approved__c - Requested_date_to_be_Approved__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Expected_date_to_be_Approved__c - Requested_date_to_be_Approved__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Expected_date_to_be_Approved__c - Requested_date_to_be_Approved__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Expected_date_to_be_Approved__c - Requested_date_to_be_Approved__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Expected_date_to_be_Approved__c - Requested_date_to_be_Approved__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
9999999999) + 
(FLOOR(( Expected_date_to_be_Approved__c - Requested_date_to_be_Approved__c )/7)*5)-1))</formula>
        <label>Diff Exp&amp;Req To Be Appr(Business Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_debit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Debit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dispatch_exchange_office__c</fullName>
        <label>Dispatch Exchange Office</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Extension, Work Site, External Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Distributor)</relationshipLabel>
        <relationshipName>Cases5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date_Passed_Flag__c</fullName>
        <formula>IF(
OR
(
(Survey_Response_Timestamp__c &gt; Due_Date__c &amp;&amp; Due_Date__c &lt; NOW()),
(ISBLANK(Survey_Response_Timestamp__c) &amp;&amp; Due_Date__c &lt; NOW())
),
IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Flagged&quot;,20,20),
IMAGE(&quot;&quot;,&apos;&apos;,0,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date Passed Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Existing_Credit_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Existing Credit Limit</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_date_to_be_Approved__c</fullName>
        <label>Expected date to be Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Reference__c</fullName>
        <label>External Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>